[package]
name = "sklauncher"
version = "0.1.0"
authors = ["miyakogi <miyako.dev@gmail.com>"]
edition = "2021"
description = "Terminal based application launcher for Linux"

readme = "README.md"
license = "MIT"
keyword = ["tui", "launcher"]
repository = "https://github.com/miyakogi/sklauncher/"

[dependencies]
lazy_static = "1.4"
xdg = "2.4"
rust-ini = "0.18"
lenient_bool = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
indexmap = { version = "1.9", features = ["serde-1"] }
skim = "0.10"
regex = "1.7"
shlex = "1.1"
clap = { version = "4.1", features = ["derive", "wrap_help"] }
